MDEV-14683 Possible redundancy in error codes

ER_VERS_GENERATED_ALWAYS_NOT_EMPTY vs ER_VERS_ALTER_SYSTEM_FIELD

Related to #310 (91ba4f04be93b9ff927f2bd099a85c2c355e45e9).